# femto

./: CMakeLists.txt
src/: globals.h  main.c  main.h  referenceMain.c
src/display/: ANSI.c  ANSI.h  displayBuffer.c  displayBuffer.h  draw.c  draw.h  syntaxhl.c  syntaxhl.h
src/input/: keypress.c  keypress.h
src/terminal/: editor.c  editor.h  terminal.c  terminal.h
src/util/: file.c  file.h  stringParser.c  stringParser.h  stringUtil.c  stringUtil.h
